# magenta

./: .gitignore  .gitmodules  .isort.cfg  .pylintrc  .travis.yml  AUTHORS  CNAME  LICENSE  README.ko.md  README.md  README_KR.md  README_KR.md.txt  WORKSPACE  _config.yml  about.md  backports-tempfile.BUILD  ci-install.sh  ci-script.sh  conftest.py  index.html  install_magenta.sh  mido.BUILD  music.proto  music21.BUILD  pix2pix.BUILD  pix2pix_tensorflow.BUILD  pretty_midi.BUILD  python_midi.BUILD  pythonfutures.BUILD  run_4_rl_rnn_algs.sh  run_rl_rnn.sh  setup.cfg  setup.py  six.BUILD
.github/workflows/: build.yml
_includes/: footer.html  header.html  header.html~  image.html  magenta-logo.html  magenta-logo.html~
_layouts/: about.html  post.html
_posts/: 2016-06-01-welcome-to-magenta.markdown  2016-06-09-recurrent-neural-network-generation-tutorial.markdown
_sass/: _base.scss  _layout.scss
_site/: feed.xml  index.html  welcome-to-magenta.html
_site/about/: index.html
_site/css/: main.css
ai-duet/: README.md
ai-duet/server/: predict.py  server.py
ai-duet/static/: index.html
css/: main.scss
demos/: README.md
demos/NIPS_2016/: magenta_melody.sh
kokoro/: test.sh
magenta/: BUILD  README.md  __init__.py  conftest.py  magenta.bzl  version.py
magenta-music/: ci-install.sh  setup.py
magenta/music/alignment/: BUILD.bazel  README.md  WORKSPACE  align.cc  align_fine.py  align_fine_lib.py  align_utils.cc  align_utils.h  align_utils_test.cc  alignment.proto
melody_rnn/: README.md
musicgen/: .gitignore  README.md  setupenv.sh
tools/: bazel.rc
(+1261 files in other folders)
